--- a/Frontend/src/assets/styles/setup/_mq.scss
+++ b/Frontend/src/assets/styles/setup/_mq.scss
@@ -72,6 +72,15 @@
         gap: 1.5em;
       }
 
+      @media(max-width: 600px) {
+        gap: 0.75em;
+
+        img {
+          max-width: 65px;
+          min-height: 60px;
+        }
+      }
+
       @media (min-width: 900px) {
         gap: 3.75em;
       }
@@ -275,7 +284,7 @@
     }
 
     .container {
-      .logo-dropdown-area > :nth-child(1) {
+      .logo-dropdown-area> :nth-child(1) {
         @media (min-width: 1151px) {
           display: none;
         }
@@ -350,6 +359,7 @@
 
 .gig-index {
   @media (max-width: 1400px) {
+
     .gig-results-title,
     .selected-filters-wrapper,
     .gig-list {
