preparations for header mq

--- a/Frontend/src/assets/styles/setup/_mq.scss
+++ b/Frontend/src/assets/styles/setup/_mq.scss
@@ -284,7 +284,7 @@
     }
 
     .container {
-      .logo-dropdown-area> :nth-child(1) {
+      .dropdown {
         @media (min-width: 1151px) {
           display: none;
         }
