--- a/Frontend/src/assets/styles/cmps/_AppHeader.scss
+++ b/Frontend/src/assets/styles/cmps/_AppHeader.scss
@@ -24,16 +24,22 @@
     align-items: center;
     gap: 10px;
 
-    i {
+    .dropdown {
+      margin-right: 10px;
+      height: 100%;
       align-self: center;
-      cursor: pointer;
+      padding-bottom: 3px;
+
+      i {
+        align-self: center;
+        cursor: pointer;
+      }
     }
 
     h1 {
       font-family: arial;
       font-size: 30.5px;
       letter-spacing: -2.5px;
-      margin-left: 10px;
 
       span {
         margin-bottom: 8px;
