massive header mq overhaul

--- a/Frontend/src/assets/styles/cmps/_AppHeader.scss
+++ b/Frontend/src/assets/styles/cmps/_AppHeader.scss
@@ -29,6 +29,7 @@
       height: 100%;
       align-self: center;
       padding-bottom: 3px;
+      width: fit-content;
 
       i {
         align-self: center;
