--- a/Frontend/src/assets/styles/cmps/_UserChat.scss
+++ b/Frontend/src/assets/styles/cmps/_UserChat.scss
@@ -76,6 +76,7 @@
 }
 
 .chat-box {
+  color: $clrPrimary2;
   display: grid;
   position: fixed;
   overflow: auto;
@@ -218,23 +219,28 @@
           display: flex;
           flex-direction: column;
           justify-content: flex-end;
+      
 
           .message {
+            display: flex;
+            flex-direction: column;
             font-family: macan;
             width: fit-content;
             max-width: 60%;
-            display: grid;
-            padding: 1.5em;
+            padding: .5em;
             max-width: 5em;
-            &.seller {
+            &.other {
+              // flex-direction: row-reverse;
+              
               align-self: flex-end;
+              margin-inline-end: 1em;
             }
 
             .message-info {
               display: flex;
-              justify-content: center;
               align-items: center;
               margin-right: 0.625em;
+              margin-block-end: 0.25em;
 
               .avatar {
                 width: 1em;
@@ -247,7 +253,7 @@
               }
 
               .message-username {
-                font-size: 0.5em;
+                font-size: 1em;
                 font-weight: bold;
                 margin-inline-start: 0.5em;
               }
