Aside menu added

--- a/Frontend/src/assets/styles/main.scss
+++ b/Frontend/src/assets/styles/main.scss
@@ -18,6 +18,7 @@
 @import "cmps/LoginSignup";
 @import "cmps/ServicesCarousel";
 @import "cmps/CategoryNavbar";
+@import "cmps/AsideMenu";
 
 @import "cmps/GigNavbar";
 @import "cmps/AboutSeller";
