--- a/Frontend/src/assets/styles/cmps/_UserChat.scss
+++ b/Frontend/src/assets/styles/cmps/_UserChat.scss
@@ -227,22 +227,21 @@
             font-family: macan;
             width: fit-content;
             max-width: 60%;
-            padding: .5em;
-            max-width: 5em;
+            padding: 0.5em 0;
+            // max-width: 5em;
             &.other {
-              // flex-direction: row-reverse;
-              
               align-self: flex-end;
-              margin-inline-end: 1em;
+              // margin-inline-end: 1em;
             }
 
             .message-info {
               display: flex;
               align-items: center;
-              margin-right: 0.625em;
+              // margin-right: 0.625em;
               margin-block-end: 0.25em;
 
               .avatar {
+                display: none;
                 width: 1em;
                 height: 1em;
                 border-radius: 50%;
@@ -265,14 +264,22 @@
               }
             }
 
+            &.other .message-info{
+              flex-direction: row-reverse;
+            }
+
             .message-text {
               border: 1px solid $clrPrimary5;
               align-self: center;
               border-radius: 10%;
-              background-color: #f0f0f0;
+              background-color: $bgColor2;
               padding: 0.625em;
               font-size: 0.75em;
               box-shadow: 0 0.0625em 0.125em rgba(0, 0, 0, 0.1);
+            }
+
+            &.other .message-text{
+              background-color: #f0f0f0;
             }
           }
         }
