--- a/Frontend/src/assets/styles/cmps/_ReviewBreakdown.scss
+++ b/Frontend/src/assets/styles/cmps/_ReviewBreakdown.scss
@@ -8,7 +8,7 @@
 
     .stars {
       display: flex;
-      align-items: center;
+      align-items: baseline;
 
       svg {
         margin-inline-end: 0.25em;
@@ -20,7 +20,7 @@
   .breakdown-wrapper {
     margin-block-start: 0.75em;
     margin-block-end: 1.5em;
-    padding: 0 0.5em;
+    padding: 0 0.5em 0 0;
     color: $clrPrimary2;
 
     .star-counts {
