--- a/Frontend/src/assets/styles/setup/_mq.scss
+++ b/Frontend/src/assets/styles/setup/_mq.scss
@@ -552,6 +552,27 @@
     padding: 1em 2em;
   }
 
+  @media(max-width:800px) {
+    flex-direction: column;
+    gap: 1em;
+
+    .footer-part {
+      flex-direction: column;
+      gap: 1em;
+      align-items: center;
+    }
+  }
+
+  @media(min-width: 801px) {
+    flex-direction: row;
+
+    .footer-part {
+      flex-direction: row;
+      gap: 2em;
+      align-items: baseline;
+    }
+  }
+
   @media (min-width: 1401px) {
     padding: 1em 0em;
   }
