--- a/Frontend/src/assets/styles/cmps/_AsideMenu.scss
+++ b/Frontend/src/assets/styles/cmps/_AsideMenu.scss
@@ -103,7 +103,7 @@
             .MuiCollapse-wrapper {
                 .MuiCollapse-wrapperInner {
                     #panel1bh-content {
-                        max-height: 220px;
+                        max-height: 280px;
                         overflow-y: scroll;
 
                         .MuiAccordionDetails-root {
@@ -117,9 +117,48 @@
                                     .buyer-order {
                                         margin-bottom: 1em;
                                         padding-bottom: 1em;
+                                        grid-template-columns: 1fr 1fr;
+                                        grid-template-rows: 1fr auto auto;
+                                        gap: 16px;
+                                        font-weight: 100;
+                                        border-bottom: 1px solid $clrSecondary2;
 
-                                        &:not(:last-child) {
-                                            border-bottom: 1px solid $clrSecondary4;
+                                        &:last-child {
+                                            border: none;
+                                        }
+
+                                        &:not(:last-child):hover {
+                                            border-bottom: 1px solid $bgColor3;
+                                        }
+
+                                        .order-image {
+                                            grid-column: 1 / -1;
+                                            grid-row: 1;
+
+                                            img {
+                                                margin-block-start: 0.375em;
+                                                object-fit: cover;
+                                                border: 1px solid $clrSecondary4;
+                                                border-radius: 10px;
+                                                max-height: 150px;
+                                            }
+                                        }
+
+                                        .order-title {
+                                            grid-column: 1 / -1;
+                                            grid-row: 2;
+                                        }
+
+                                        .seller-name {
+                                            grid-column: 1;
+                                            grid-row: -1;
+                                            font-size: 14px;
+                                        }
+
+                                        .order-status {
+                                            grid-column: 2;
+                                            grid-row: -1;
+                                            text-align: center;
                                         }
                                     }
                                 }
