--- a/Frontend/src/assets/styles/setup/_mq.scss
+++ b/Frontend/src/assets/styles/setup/_mq.scss
@@ -400,35 +400,107 @@
 }
 
 .dashboard-page {
-  .info-divs {
-    .grid-item {
-      @media (max-width: 1400px) {
-        .icon {
-          height: 75px;
-          width: 75px;
-        }
+  .dashboard-container {
+    .seller-summary {
 
-        .title {
-          font-size: 1em;
-        }
+      .general-area,
+      .financial-area {
+        .info-area {
+          @media(max-width: 600px) {
+            grid-template-columns: repeat(3, 1fr);
+            grid-template-rows: repeat(2, 1fr);
 
-        .info {
-          font-size: 1em;
-        }
-      }
+            .info-cell {
+              &:nth-of-type(1) {
+                grid-column: 1;
+                grid-row: 1;
+              }
 
-      @media (min-width: 1401px) {
-        .icon {
-          height: 150px;
-          width: 150px;
-        }
+              &:nth-of-type(2) {
+                grid-column: 2;
+                grid-row: 1;
+              }
 
-        .title {
-          font-size: 2em;
-        }
+              &:nth-of-type(3) {
+                grid-column: 3;
+                grid-row: 1;
+              }
 
-        .info {
-          font-size: 2em;
+              &:nth-of-type(4) {
+                grid-column: 1;
+                grid-row: 2;
+              }
+
+              &:nth-of-type(5) {
+                grid-column: 3;
+                grid-row: 2;
+              }
+            }
+          }
+
+          @media(max-width: 400px) {
+            grid-template-columns: repeat(2, 1fr);
+            grid-template-rows: repeat(5, 1fr);
+
+            .info-cell {
+              &:nth-of-type(1) {
+                grid-column: 1;
+                grid-row: 1;
+              }
+
+              &:nth-of-type(2) {
+                grid-column: 2;
+                grid-row: 1;
+              }
+
+              &:nth-of-type(3) {
+                grid-column: 1;
+                grid-row: 2;
+              }
+
+              &:nth-of-type(4) {
+                grid-column: 2;
+                grid-row: 2;
+              }
+
+              &:nth-of-type(5) {
+                grid-column: 1 / -1;
+                grid-row: 3;
+              }
+            }
+          }
+
+          @media(min-width: 601px) {
+            grid-template-columns: repeat(5, 1fr);
+            grid-template-rows: 1fr;
+
+            .info-cell {
+              &:nth-of-type(1) {
+                grid-column: 1;
+                grid-row: 1;
+              }
+
+              &:nth-of-type(2) {
+                grid-column: 2;
+                grid-row: 1;
+              }
+
+              &:nth-of-type(3) {
+                grid-column: 3;
+                grid-row: 1;
+              }
+
+              &:nth-of-type(4) {
+                grid-column: 4;
+                grid-row: 1;
+              }
+
+              &:nth-of-type(5) {
+                grid-column: 5;
+                grid-row: 1;
+              }
+            }
+          }
         }
       }
     }
