--- a/Frontend/src/assets/styles/cmps/_PurchaseMain.scss
+++ b/Frontend/src/assets/styles/cmps/_PurchaseMain.scss
@@ -110,7 +110,7 @@
               width: 100%;
               display: flex;
               flex-wrap: nowrap;
-              border: 1px solid clrSecondary45;
+              border: 1px solid $clrSecondary45;
               border-radius: 0.25em;
               flex-basis: 100%;
               align-items: center;
