--- a/Frontend/src/assets/styles/setup/_mq.scss
+++ b/Frontend/src/assets/styles/setup/_mq.scss
@@ -364,6 +364,10 @@
     @media (max-width: 1400px) {
       padding: 0 2em;
     }
+
+    @media(max-width: 600px) {
+      display: none;
+    }
   }
 }
 
@@ -390,11 +394,11 @@
 }
 
 .dimmed-content {
-  @media (max-width:500px) {
-    inset: 130px 0px 0px;
+  @media (max-width:600px) {
+    inset: 134px 0px 0px;
   }
 
-  @media (min-width:501px) {
+  @media (min-width:601px) {
     inset: 80px 0px 0px;
   }
 }
