improved dashboard for mobile

--- a/Frontend/src/assets/styles/setup/_variables.scss
+++ b/Frontend/src/assets/styles/setup/_variables.scss
@@ -37,6 +37,14 @@ $clr4: #d83b3b;  //not used
 $clr5: #0077ff;  //not used
 $clr6: #ffff54;  //not used
 $clr7: #ffbe5b;
+$clr8: #ff8a8a;
+$clr9: #fa3232;
+$clr10: #22dd86;
+$clr11: #148550;
+$clr12: #81e0fd;
+$clr13: #2890af;
+$clr14: #ffdf80;
+$clr15: #ca9800;
 
 // Breakpoints
 $mobile-breakpoint: 460px;  //not used
