--- a/Frontend/src/assets/styles/setup/_mq.scss
+++ b/Frontend/src/assets/styles/setup/_mq.scss
@@ -411,40 +411,9 @@
       .financial-area {
         .info-area {
           @media(max-width: 600px) {
-            grid-template-columns: repeat(3, 1fr);
-            grid-template-rows: repeat(2, 1fr);
-
-            .info-cell {
-              &:nth-of-type(1) {
-                grid-column: 1;
-                grid-row: 1;
-              }
-
-              &:nth-of-type(2) {
-                grid-column: 2;
-                grid-row: 1;
-              }
-
-              &:nth-of-type(3) {
-                grid-column: 3;
-                grid-row: 1;
-              }
-
-              &:nth-of-type(4) {
-                grid-column: 1;
-                grid-row: 2;
-              }
-
-              &:nth-of-type(5) {
-                grid-column: 3;
-                grid-row: 2;
-              }
-            }
-          }
-
-          @media(max-width: 400px) {
-            grid-template-columns: repeat(2, 1fr);
+            grid-template-columns: repeat(1, 1fr);
             grid-template-rows: repeat(5, 1fr);
+            height: fit-content;
 
             .info-cell {
               &:nth-of-type(1) {
@@ -453,26 +422,58 @@
               }
 
               &:nth-of-type(2) {
-                grid-column: 2;
-                grid-row: 1;
-              }
-
-              &:nth-of-type(3) {
                 grid-column: 1;
                 grid-row: 2;
               }
 
-              &:nth-of-type(4) {
-                grid-column: 2;
-                grid-row: 2;
-              }
-
-              &:nth-of-type(5) {
-                grid-column: 1 / -1;
+              &:nth-of-type(3) {
+                grid-column: 1;
                 grid-row: 3;
               }
+
+              &:nth-of-type(4) {
+                grid-column: 1;
+                grid-row: 4;
+              }
+
+              &:nth-of-type(5) {
+                grid-column: 1;
+                grid-row: 5;
+              }
             }
           }
+
+          // @media(max-width: 400px) {
+          //   grid-template-columns: repeat(2, 1fr);
+          //   grid-template-rows: repeat(5, 1fr);
+
+          //   .info-cell {
+          //     &:nth-of-type(1) {
+          //       grid-column: 1;
+          //       grid-row: 1;
+          //     }
+
+          //     &:nth-of-type(2) {
+          //       grid-column: 2;
+          //       grid-row: 1;
+          //     }
+
+          //     &:nth-of-type(3) {
+          //       grid-column: 1;
+          //       grid-row: 2;
+          //     }
+
+          //     &:nth-of-type(4) {
+          //       grid-column: 2;
+          //       grid-row: 2;
+          //     }
+
+          //     &:nth-of-type(5) {
+          //       grid-column: 1 / -1;
+          //       grid-row: 3;
+          //     }
+          //   }
+          // }
 
           @media(min-width: 601px) {
             grid-template-columns: repeat(5, 1fr);
