--- a/Frontend/src/assets/styles/setup/_mq.scss
+++ b/Frontend/src/assets/styles/setup/_mq.scss
@@ -416,6 +416,8 @@
             height: fit-content;
 
             .info-cell {
+              flex-direction: row;
+
               &:nth-of-type(1) {
                 grid-column: 1;
                 grid-row: 1;
@@ -442,38 +444,6 @@
               }
             }
           }
-
-          // @media(max-width: 400px) {
-          //   grid-template-columns: repeat(2, 1fr);
-          //   grid-template-rows: repeat(5, 1fr);
-
-          //   .info-cell {
-          //     &:nth-of-type(1) {
-          //       grid-column: 1;
-          //       grid-row: 1;
-          //     }
-
-          //     &:nth-of-type(2) {
-          //       grid-column: 2;
-          //       grid-row: 1;
-          //     }
-
-          //     &:nth-of-type(3) {
-          //       grid-column: 1;
-          //       grid-row: 2;
-          //     }
-
-          //     &:nth-of-type(4) {
-          //       grid-column: 2;
-          //       grid-row: 2;
-          //     }
-
-          //     &:nth-of-type(5) {
-          //       grid-column: 1 / -1;
-          //       grid-row: 3;
-          //     }
-          //   }
-          // }
 
           @media(min-width: 601px) {
             grid-template-columns: repeat(5, 1fr);
