--- a/Frontend/src/assets/styles/cmps/_GigFilter.scss
+++ b/Frontend/src/assets/styles/cmps/_GigFilter.scss
@@ -7,15 +7,21 @@
       font-family: 'macan-light';
       font-weight: 400;
       line-height: 36px;
-      color: $clrPrimary1;
-      padding-bottom: 12px;
-      padding-top: 32px;
+      color: $clrPrimary2;
+      padding: 1rem 0;
     }
   }
 
   .explore-category {
-    padding: 1.25em 0 0.75em 0;
+    padding: 0.75em 0;
     color: $clrSecondary8;
+    a{
+      display: flex;
+      align-items: center;
+      i{
+        display:block;
+      }
+    }
 
     Link {
       padding: rem(9px);
