--- a/Frontend/src/assets/styles/views/_DashboardPage.scss
+++ b/Frontend/src/assets/styles/views/_DashboardPage.scss
@@ -46,7 +46,7 @@
         max-width: 900px;
 
         h3 {
-            margin-bottom: 1em;
+            margin-bottom: 0.5em;
             text-align: left;
             font-size: 20px;
             font-family: "macan-bold";
@@ -63,7 +63,8 @@
                     border: 1px solid $clrSecondary4;
                     border-radius: 0.5em;
                     max-height: 400px;
-                    box-shadow: -0.2em 0.2em $clrSecondary5;
+                    box-shadow: -0.1em 0.15em $clrSecondary4;
+                    justify-content: space-between;
 
                     .info-cell {
                         justify-content: space-between;
@@ -82,15 +83,15 @@
                         display: inline-flex;
                         justify-content: center;
                         align-items: center;
-                        width: 80px;
-                        height: 80px;
+                        width: 100px;
+                        height: 100px;
                         margin: 10px;
                         position: relative;
 
                         svg {
                             transform: rotate(-90deg);
-                            width: 80px;
-                            height: 80px;
+                            width: 100px;
+                            height: 100px;
                         }
                     }
 
@@ -109,11 +110,12 @@
 
                     .number {
                         position: absolute;
-                        line-height: 80px;
-                        width: 80px;
+                        line-height: 100px;
+                        width: 100px;
                         text-align: center;
-                        font-weight: bold;
-                        font-size: 0.8em;
+                        font-size: 1em;
+                        color: $clrSecondary6;
+                        font-family: 'macan-bold';
                     }
 
                     @media (max-width: 600px) {
@@ -127,9 +129,9 @@
                     border: 1px solid $clrSecondary4;
                     border-radius: 0.5em;
                     padding: 1em 0em;
-                    justify-content: space-around;
                     max-height: 280px;
-                    box-shadow: -0.2em 0.2em $clrSecondary5;
+                    box-shadow: -0.1em 0.15em $clrSecondary4;
+                    justify-content: space-between;
 
                     .info-cell {
                         padding: 0em 1em;
@@ -138,7 +140,7 @@
                         gap: 0.5em;
 
                         h4 {
-                            color: #19a463;
+                            color: $clrSecondary6;
                         }
 
                         p {
@@ -146,6 +148,7 @@
                             font-family: "macan-bold";
                             color: $clrSecondary6;
                             margin: 0;
+                            color: $bgColor5;
                         }
                     }
 
@@ -242,26 +245,23 @@
                             text-transform: uppercase;
                             font-family: "macan-bold";
                             text-align: center;
+                            color: $clrPrimary1;
 
                             &.pending {
                                 background: $clr14;
-                                color: $clr15;
                             }
 
                             &.denied {
                                 background: $clr8;
-                                color: $clr9;
                                 cursor: default;
                             }
 
                             &.accepted {
                                 background: $clr10;
-                                color: $clr11;
                             }
 
                             &.completed {
                                 background: $clr12;
-                                color: $clr13;
                                 cursor: default;
                             }
 
@@ -333,7 +333,7 @@
                         border: 1px solid $clrSecondary2;
                         border-radius: 0.5em;
                         padding: 1em;
-                        box-shadow: -0.2em 0.2em $clrSecondary5;
+                        box-shadow: -0.1em 0.15em $clrSecondary4;
 
                         .order-image {
                             grid-column: 1;
@@ -416,27 +416,24 @@
                                 text-transform: uppercase;
                                 padding: 1.2em 0.8em;
                                 border-radius: 5px;
+                                color: $clrPrimary1;
 
                                 &.pending {
                                     background: $clr14;
-                                    color: $clr15;
                                     cursor: pointer;
                                 }
 
                                 &.denied {
-                                    background: $clr8;
-                                    color: $clr9;
+                                    background: $clr16;
                                 }
 
                                 &.accepted {
                                     background: $clr10;
-                                    color: $clr11;
                                     cursor: pointer;
                                 }
 
                                 &.completed {
                                     background: $clr12;
-                                    color: $clr13;
                                 }
                             }
 
