--- a/Frontend/src/assets/styles/setup/_variables.scss
+++ b/Frontend/src/assets/styles/setup/_variables.scss
@@ -45,6 +45,7 @@ $clr12: #81e0fd;
 $clr13: #2890af;
 $clr14: #ffdf80;
 $clr15: #ca9800;
+$clr16: #f96363;
 
 // Breakpoints
 $mobile-breakpoint: 460px;  //not used
