--- a/Frontend/src/assets/styles/cmps/_WelcomeSection.scss
+++ b/Frontend/src/assets/styles/cmps/_WelcomeSection.scss
@@ -1,140 +1,143 @@
 .home-wrapper {
-    .welcome-wrapper {
-        height: 760px;
-        width: 100%;
-        color: $clrPrimary1;
-        position: relative;
-        background-color: $bgColor1;
+  .welcome-wrapper {
+    height: 760px;
+    width: 100%;
+    color: $clrPrimary1;
+    position: relative;
+    background-color: $bgColor1;
 
-        .person-info {
-            position: absolute;
-            bottom: 32px;
-            right: 32px;
-            display: flex;
-            align-items: center;
-            z-index: 3;
-            box-shadow: 0 20px 30px 0 rgba(0, 37, 19, .2);
-            background: #ffffff24;
-            border-radius: 100px;
-            width: fit-content;
-            padding: 12px 24px 12px 12px;
-            border: 1px solid #ffffff66;
-            backdrop-filter: blur(30px);
-            transition: opacity 1s;
+    .person-info {
+      position: absolute;
+      bottom: 32px;
+      right: 32px;
+      display: flex;
+      align-items: center;
+      z-index: 3;
+      box-shadow: 0 20px 30px 0 rgba(0, 37, 19, 0.2);
+      background: #ffffff24;
+      border-radius: 100px;
+      width: fit-content;
+      padding: 12px 24px 12px 12px;
+      border: 1px solid #ffffff66;
+      backdrop-filter: blur(30px);
+      transition: opacity 1s;
 
-            .small-img {
-                width: 20%;
-                transition: opacity 1s;
-                margin-right: 0.3em;
-            }
+      .small-img {
+        width: 20%;
+        transition: opacity 1s;
+        margin-right: 0.3em;
+      }
 
-            .text-content {
-                white-space: nowrap;
-                padding-left: 0.4em;
+      .text-content {
+        white-space: nowrap;
+        padding-left: 0.4em;
 
-                .title,
-                .subtitle {
-                    font-family: 'macan-bold';
-                }
-
-                .title {
-                    font-size: 12px;
-                    line-height: 12px;
-                    justify-content: space-between;
-                    align-items: center;
-
-                    span {
-                        align-items: self-end;
-                        height: 13px;
-                        width: 19px;
-
-                        .star-icon {
-                            padding-left: 1px;
-                            width: 50%;
-                            height: 75%;
-                            align-self: center;
-                        }
-                    }
-                }
-
-                .subtitle {
-                    font-size: 16px;
-                }
-            }
+        .title,
+        .subtitle {
+          font-family: "macan-bold";
         }
 
-        .background-content {
-            position: absolute;
-            top: 0;
-            right: 0;
-            bottom: 0;
-            left: 0;
-            background-size: cover;
-            background-position: 100% 100%;
-            transition: opacity 1s;
-            z-index: 1;
-            max-width: 1650px;
-            margin: auto;
-        }
+        .title {
+          font-size: 12px;
+          line-height: 12px;
+          justify-content: space-between;
+          align-items: center;
 
-        .welcome-section {
-            width: 100%;
-            max-width: 1400px;
-            height: 100%;
-            margin: auto;
-            position: relative;
-            overflow: hidden;
+          span {
+            align-items: self-end;
+            height: 13px;
+            width: 19px;
 
-            .welcome-text-search {
-                height: fit-content;
-                position: absolute;
-                z-index: 3;
-                top: 35.5%;
-                font-size: 40px;
-
-                h1 {
-                    font-family: "macan-bold";
-                    margin-bottom: 0.5em;
-                    font-weight: 100;
-
-                    span {
-                        font-family: 'domain-display-medium';
-                        font-weight: 500;
-                        margin-left: 3px;
-                    }
-                }
-
-                .quick-search {
-                    align-items: center;
-                    gap: 0.3em;
-                    width: fit-content;
-
-                    a,
-                    h4 {
-                        font-size: 14px;
-                        font-family: 'macan-bold';
-                        margin: 0;
-
-                        &:first-child {
-                            font-weight: 500;
-                        }
-
-                        &:not(:first-child) {
-                            color: $clrPrimary1;
-                            border: 1px solid;
-                            border-radius: 50px;
-                            padding: 2px 12px 2px;
-
-                            &:hover {
-                                text-decoration: none;
-                                background: $clrPrimary1;
-                                color: $clrSecondary8;
-                                border: 1px solid $clrPrimary1;
-                            }
-                        }
-                    }
-                }
+            .star-icon {
+              padding-left: 1px;
+              width: 50%;
+              height: 75%;
+              align-self: center;
             }
+          }
         }
+
+        .subtitle {
+          font-size: 16px;
+        }
+      }
     }
+
+    .background-content {
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      background-size: cover;
+      background-position: 100% 100%;
+      transition: opacity 1s;
+      z-index: 1;
+      max-width: 1650px;
+      margin: auto;
+    }
+
+    .welcome-section {
+      width: 100%;
+      max-width: 1400px;
+      height: 100%;
+      margin: auto;
+      position: relative;
+      overflow: hidden;
+
+      .welcome-text-search {
+        height: fit-content;
+        position: absolute;
+        z-index: 3;
+        top: 35.5%;
+        font-size: 40px;
+
+        h1 {
+          font-family: "macan-bold";
+          margin-bottom: 0.5em;
+          font-weight: 100;
+
+          span {
+            font-family: "domain-display-medium";
+            font-weight: 500;
+            margin-left: 3px;
+          }
+        }
+
+        .quick-search {
+          align-items: center;
+          gap: 0.3em;
+          width: fit-content;
+
+          a,
+          h4 {
+            font-size: 14px;
+            font-family: "macan-bold";
+            margin: 0;
+
+            &:first-child {
+              font-weight: 500;
+            }
+
+            &:not(:first-child) {
+              color: $clrPrimary1;
+              border: 1px solid;
+              border-radius: 50px;
+              padding: 2px 12px 2px;
+
+              &:hover {
+                text-decoration: none;
+                background: $clrPrimary1;
+                color: $clrSecondary8;
+                border: 1px solid $clrPrimary1;
+              }
+            }
+          }
+        }
+        @media (max-width: 900px) {
+          left: 0;
+        }
+      }
+    }
+  }
 }
